# lba1-classic-community

./: .dosbox-debug.conf  .dosbox-staging.conf  .dosbox-x.conf  .dosbox.conf  .gitignore  AUTHORS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTENT.md  CONTRIBUTING.md  README.md  SETENV.BAT  TODO.md
.github/workflows/: cmake-release.yml  main.yml
LIB386/LIB_3D/: CMakeLists.txt  LIB_3D.H  MAKEFILE  P_ANIM.ASM  P_ANIM.C  P_FUNC.ASM  P_FUNC.C  P_OBJET.ASM  P_OBJ_3D.ASM  P_OB_ISO.ASM  P_SINTAB.ASM  P_SINTAB.C  P_TRIGO.ASM
LIB386/LIB_CD/: CDROM.ASM  CMakeLists.txt  LIB_CD.C  LIB_CD.H  MAKEFILE  _MAKEFILE
LIB386/LIB_MENU/: CMakeLists.txt  LIB_MENU.H  MAKEFILE  MENU.C  MENUFUNC.C  SELECTOR.C
LIB386/LIB_MIDI/: CMakeLists.txt  LIB_MIDI.C  LIB_MIDI.H  MAKEFILE  MIDI.C  MIDI_STUB.C
LIB386/LIB_MIX/: CMakeLists.txt  LIB_MIX.H  MAKEFILE  MIXER.C  MIXER_I.ASM  MIX_DLL.MAK  PRNTITRE.bat
LIB386/LIB_SAMP/: BALANCE.ASM  BALANCE.H  CMakeLists.txt  GUS.C  LIB_WAVE.H  MAKEFILE  N_WAVE.ASM  TEST.C  WAVE.C  WAVE_A.ASM  WAVE_DLL.MAK  WAVE_I.ASM
LIB386/LIB_SVGA/: BLOC.C  CMakeLists.txt  CPYMASK.ASM  DLL.ASM  DLL.MAK  DLL_I.ASM  FONT6X6.C  FONT8X8.ASM  FONT8X8.C  FONT_A.ASM  FONT_A.C  GIF.C  GRAPHMSK.ASM  GRAPH_A.ASM  INITMODE.C  INITSVGA.ASM  LBM.C  LIB_SVGA.H  MAKEFILE  MASKGPH.C  MASK_A.ASM  PCX.C  RECT.C  SAVEPCX.C  SVGA.ASH  S_BLOCK.ASM  S_BLOCK2.ASM  S_BLOCK3.ASM  S_BOX.ASM  S_CPYBOX.ASM  S_DLL.C  S_FILLV.ASM  S_LINE.ASM  S_MOUSE.C  S_MOUSEA.ASM  S_PAL.ASM  S_PHYS.ASM  S_PLOT.ASM  S_POLY.ASM  S_SCREEN.ASM  (+7 more)
LIB386/LIB_SVGA_DOS/: CMakeLists.txt  INITSVGA.ASM  MAKEFILE  VESA.ASM
LIB386/LIB_SVGA_WIN/: CMakeLists.txt  initsvga_win.c  video.c
LIB386/LIB_SYS/: ADELINE.C  ADELINE.H  BUFFER_A.ASM  BUFFER_A.C  CMakeLists.txt  DEFINES.H  DEF_FILE.C  DIVERS.C  DLL.H  DLLLOAD.C  EXPAND.ASM  EXPAND.C  FILES.C  FILES_A.ASM  HARDERR.ASM  HQR.ASM  HQR.C  HQ_MEM.C  HQ_RESS.C  HQ_R_M.C  KEYB.C  KEYBOARD.ASM  LIB_SYS  LIB_SYS.ASH  LIB_SYS.H  LOADMALL.C  LOADSAVE.C  MAKEFILE  MALLOC.C  MALLOC_ORIG.C  SYSTEM.C  SYS_FILESYSTEM.H  SYS_TIME.H  TIMER.C  TIMER_A.ASM  WINBOX.H
LIB386/LIB_SYS_DOS/: CMakeLists.txt  FILES_A.C  KEYB.C  MAKEFILE  MALLOC.C  TIMER.C  TIMER_A.ASM
LIB386/LIB_SYS_WIN/: CMakeLists.txt  harderr.c  keyboard.c  malloc.c  timer.c
LIB386/PLATFORM/: PLATFORMS.md
LIB386/PLATFORM/DOS/LIB_CD/: CDROM.ASM  CMakeLists.txt  MAKEFILE
LIB386/PLATFORM/DOS/LIB_MENU/: CMakeLists.txt  MAKEFILE  SELECTOR.C
LIB386/PLATFORM/DOS/LIB_MIDI/: CMakeLists.txt  INCLUDE.C  MAKEFILE  MIDI.C  README.md
LIB386/PLATFORM/DOS/LIB_MIDI/AIL32/: 386.MAC  A32MP.MAK  A32WR.MAK  A32ZF.MAK  AIL32.ASM  AIL32.H  AIL32.INC  DLL.H  DLLLOAD.C  DMASND32.ASM  MIX32.C  MPU40132.INC  MT3232.INC  SBMIDI32.INC  SPKR32.INC  STP32.C  VP32.C  XMIDI32.ASM  XP32.C  YAMAHA32.INC
LIB386/PLATFORM/DOS/LIB_MIX/: CMakeLists.txt  MAKEFILE  MIXER_A.ASM  MIXER_I.ASM
LIB386/PLATFORM/DOS/LIB_SAMP/: CMakeLists.txt  DMA_CODE.ASM  GUS.C  MAKEFILE  N_WAVE.ASM  WAVE.C  WAVE_A.ASM
LIB386/PLATFORM/DOS/LIB_SVGA/: CMakeLists.txt  INITMODE.C  MAKEFILE  S_DLL.C  S_MOUSE.C  VESA.ASM
LIB386/PLATFORM/DOS/LIB_SYS/: CMakeLists.txt  DLLLOAD.C  FILESYSTEM.C  FILES_A.C  KEYB.C  KEYBOARD.C  MALLOC.C  SYSTEM.C  TIME.C  TIMER.C  TIMER_A.C
SOURCES/: ADFLI_A.ASM  ADFLI_A.C  AMBIANCE.C  BALANCE.ASM  BALANCE.C  BALANCE.H  BUBSORT.C  CMakeLists.txt  COMMON.H  CPYMASK.ASM  CPYMASK.C  C_EXTERN.H  DEFINES.H  DISKFUNC.C  EXTRA.C  FICHE.C  FIRE.ASM  FIRE.C  FLA.H  FLIPBOX.C  FUNC.ASM  FUNC.C  GAMEMENU.C  GAMEMENU.DEF  GERELIFE.C  GERETRAK.C  GLOBAL.C  GRAPH_A.ASM  GRILLE.C  GRILLE.H  GRILLE_A.ASM  GRILLE_A.C  HOLOMAP.C  HOLOMAP.DEF  INCRUST.C  MAKEFILE  MALLOC.C  MASK_A.ASM  MCGA.ASM  MCGA.C  (+14 more)
SOURCES/Assets/Text/: README.md  de_ctxt.csv  en_ctxt.csv  fr_ctxt.csv  it_ctxt.csv  sp_ctxt.csv
SOURCES/CommunityAssets/Text/: README.md  cust_txt.csv  de_ctxt.csv  sp_ctxt.csv
cmake/toolchains/: openwatcom.cmake
